--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(Raytracer VERSION 0.1.0)
 
 set (CMAKE_CXX_STANDARD 11)
 
+include_directories (.)
+include_directories (glm)
+include_directories (stb)
+
 add_executable(Raytracer main.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
